<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFE0E0E0"
    android:splitMotionEvents="false"
    tools:context=".PsMainFrame">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/WorkMessage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:background="#FFFFFFFF"
                android:padding="12sp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/WorkMessage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                android:id="@+id/Guidance"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#FFFFFFFF"
                android:lines="4"
                android:gravity="center"
                android:padding="12sp"
                android:textColor="#FF0000FF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Guidance"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/inputRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="Username or ID"
                    android:paddingHorizontal="12sp"
                    android:textColor="#FF000000"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:background="#FFFFFFFF"
                        android:ems="10"
                        android:inputType="text"
                        android:lines="1"
                        android:padding="12sp"
                        android:textColor="#FF000000"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputRow"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="2"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2">

                <TextView
                    android:id="@+id/IdListLbl"
                    android:layout_width="38dp"
                    android:paddingHorizontal="12sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/IdListLbl"
                    android:textColor="#FF000000"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/IdNumLbl"
                    android:layout_width="123dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/IdNumLbl"
                    android:textColor="#FF000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/IdNum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFFFF"
                    android:gravity="center"
                    android:lines="1"
                    android:padding="4sp"
                    android:textColor="#FF000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout01"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@+id/IdList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#9b47f5"
                android:padding="4sp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="86dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/DeleteBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4sp"
            android:layout_weight="1"
            android:text="@string/CancelBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4sp"
            android:layout_weight="1"
            android:text="@string/CancelBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/ExitBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4sp"
            android:layout_weight="1"
            android:text="@string/ExitBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:hideOnScroll="true"
            app:menu="@menu/bottom_app_bar"
            app:navigationIcon="@drawable/ic_menu_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainFloating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_scanner_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/EnrollBtn"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/mainFloating"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center"
            android:layout_marginBottom="96dp"
            app:srcCompat="@drawable/ic_add_24dp" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/VerifyBtn"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/EnrollBtn"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center"
            android:layout_marginBottom="164dp"
            app:srcCompat="@drawable/ic_verified_24" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/IdentifyBtn"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/VerifyBtn"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="center"
            android:layout_marginBottom="234dp"
            app:srcCompat="@drawable/ic_identity_24" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>